<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/task_item"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/task_item_display"
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/task_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/task_testName"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/task_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/task_testDeadline"
                android:textSize="24sp" />


        </LinearLayout>

        <CheckBox
            android:layout_weight="6"
            android:id="@+id/task_finished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/task_status"
            android:textSize="24sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/task_item_hidden"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="#ff0000"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/task_item_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_button"
            android:textColor="#ffffff"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>