<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tasklist_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:orientation="horizontal">


    <LinearLayout
        android:id="@+id/tasklist_item_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tasklist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/task_testName"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/tasklist_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/task_testType"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tasklist_item_hidden"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="#ff0000"
        android:gravity="center"
        android:clickable="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tasklist_item_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/delete_button"
            android:textColor="#ffffff"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>